apps/media/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
  labels:
    app: overseerr
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: overseerr
