apps/media/overseerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.i.recompiled.org`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
  tls:
    secretName: overseerr-tls
